--- a/assets/css/intro.css
+++ b/assets/css/intro.css
@@ -1,179 +1,1 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-size: 20px;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-  position: relative;
-}
-
-body {
-  background: #000;
-  color: #fff;
-  height: auto;
-  min-height: 100%;
-  overflow: hidden;
-}
-
-main {
-  background: #111;
-  border: solid 1px #222;
-  padding: 2rem;
-  max-width: 100%;
-  width: 960px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 2rem;
-}
-main > * {
-  grid-column: 1/-1;
-}
-
-img {
-  max-width: 100%;
-}
-
-p {
-  line-height: 1.8;
-  margin: 1rem 0;
-  color: #9ea6b8;
-}
-
-h1 {
-  line-height: 1.3;
-  font-size: 5vw;
-  margin: 1rem 0;
-}
-
-h2 {
-  font-size: 4vw;
-  margin: 1rem 0;
-}
-
-h3 {
-  font-size: 2vw;
-  font-weight: bold;
-}
-
-h2.subheader {
-  font-size: 2vw;
-}
-
-section {
-  grid-column: auto;
-}
-
-header {
-  display: grid;
-  align-content: center;
-  grid-column: 1/-1;
-}
-
-.callout {
-  text-align: center;
-  background-color: #3173fa;
-  padding: 1vw 3vw;
-}
-.callout > p {
-  color: white;
-}
-
-.container {
-  perspective: 1200px;
-  transform-style: preserve-3d;
-  -webkit-animation: cinematic-camera 5s cubic-bezier(0.6, 0, 0.4, 1) both ;
-          animation: cinematic-camera 5s cubic-bezier(0.6, 0, 0.4, 1) both ;
-}
-@-webkit-keyframes cinematic-camera {
-  from {
-    perspective-origin: 60% 40%;
-  }
-  to {
-    perspective-origin: 40% 60%;
-  }
- 
-  from, to {
-    opacity: 0;
-  }
-  25%, 75% {
-    opacity: 1;
-  }
-}
-@keyframes cinematic-camera {
-  from {
-    perspective-origin: 60% 40%;
-  }
-  to {
-    perspective-origin: 40% 60%;
-  }
-  from, to {
-    opacity: 0;
-  }
-  25%, 75% {
-    opacity: 1;
-  }
-}
-.container:after {
-  content: "";
-  background: linear-gradient(to bottom, #000, #0000 20%, #0000 80%, #000);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-}
-
-main {
-  transform-origin: top center;
-  transform-style: preserve-3d;
-  -webkit-animation: inherit;
-          animation: inherit;
-  -webkit-animation-name: cinematic;
-          animation-name: cinematic;
-}
-main > img {
-  display: block;
-  transform-style: preserve-3d;
-  -webkit-animation: inherit;
-          animation: inherit;
-  -webkit-animation-name: image-pop;
-          animation-name: image-pop;
-}
-@-webkit-keyframes image-pop {
-  70%, 100% {
-    transform: translate3d(0, 0, 60px);
-  }
-}
-@keyframes image-pop {
-  70%, 100% {
-    transform: translate3d(0, 0, 60px);
-  }
-}
-main > img:last-of-type {
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
-}
-@-webkit-keyframes cinematic {
-  from {
-    transform: translateZ(-200px) rotateY(30deg) translateY(50vh);
-  }
-  to {
-    transform: translateZ(-100px) rotateY(-30deg) translateY(-100%) translateY(50vh);
-  }
-}
-@keyframes cinematic {
-  from {
-    transform: translateZ(-200px) rotateY(30deg) translateY(50vh);
-  }
-  to {
-    transform: translateZ(-100px) rotateY(-30deg) translateY(-100%) translateY(50vh);
-  }
-}
+h1,h2,p{margin:1rem 0}header,main>*{grid-column:1/-1}.callout>p,body{color:#fff}img,main{max-width:100%}header,main{display:grid}.container,main,main>img{transform-style:preserve-3d}body,html{width:100%;height:100%;margin:0;padding:0;font-size:20px}*,:after,:before{box-sizing:border-box;position:relative}body{background:#000;height:auto;min-height:100%;overflow:hidden}p{line-height:1.8;color:#9ea6b8}h1{line-height:1.3;font-size:5vw}h2{font-size:4vw}h2.subheader,h3{font-size:2vw}h3{font-weight:700}section{grid-column:auto}header{align-content:center}.callout{text-align:center;background-color:#3173fa;padding:1vw 3vw}.container{perspective:1200px;-webkit-animation:5s cubic-bezier(.6,0,.4,1) both cinematic-camera;animation:5s cubic-bezier(.6,0,.4,1) both cinematic-camera}@-webkit-keyframes cinematic-camera{from{perspective-origin:60% 40%}to{perspective-origin:40% 60%}from,to{opacity:0}25%,75%{opacity:1}}@keyframes cinematic-camera{from{perspective-origin:60% 40%}to{perspective-origin:40% 60%}from,to{opacity:0}25%,75%{opacity:1}}.container:after{content:"";background:linear-gradient(to bottom,#000,#0000 20%,#0000 80%,#000);position:absolute;top:0;left:0;width:100%;height:100vh}main{background:#111;border:1px solid #222;padding:2rem;width:960px;margin:0 auto;grid-template-columns:1fr 1fr;grid-gap:2rem;transform-origin:top center;-webkit-animation:inherit;animation:inherit;-webkit-animation-name:cinematic;animation-name:cinematic}main>img{display:block;-webkit-animation:inherit;animation:inherit;-webkit-animation-name:image-pop;animation-name:image-pop}@-webkit-keyframes image-pop{100%,70%{transform:translate3d(0,0,60px)}}@keyframes image-pop{100%,70%{transform:translate3d(0,0,60px)}}main>img:last-of-type{-webkit-animation-delay:4s;animation-delay:4s}@-webkit-keyframes cinematic{from{transform:translateZ(-200px) rotateY(30deg) translateY(50vh)}to{transform:translateZ(-100px) rotateY(-30deg) translateY(-100%) translateY(50vh)}}@keyframes cinematic{from{transform:translateZ(-200px) rotateY(30deg) translateY(50vh)}to{transform:translateZ(-100px) rotateY(-30deg) translateY(-100%) translateY(50vh)}}
