--- a/Gallery/style.css
+++ b/Gallery/style.css
@@ -21,13 +21,23 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 100vh;
+  min-height: 50vh;
   background: #000000;
 }
 
 h1 {
   position: absolute;
-  bottom: 25%;
+  bottom: 50%;
+  left: 50%;
+  color: #fff;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-weight: 700;
+}
+
+h2 {
+  position: absolute;
+  bottom: 5%;
   left: 50%;
   color: #fff;
   -webkit-transform: translateX(-50%);
