--- a/news/style.css
+++ b/news/style.css
@@ -5,11 +5,29 @@
 }
 
 body {
-    font-family: 'Lato', sans-serif;
-    background-color: #333;
+    font-family: 'Merriweather', serif;
+    background-color: #05303c;
     color: #222;
-    overflow-x: hidden;
     margin: 0;
+    height: 100vh; /* Full viewport height */
+    overflow: hidden;
+}
+
+.loading-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 10vh;
+    z-index: 1;
+}
+
+.check {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: white;
 }
 
 .container {
@@ -122,7 +140,7 @@ nav a:hover {
 }
 
 .content img {
-    max-width: 100%;
+    max-width: 80%;
 }
 
 .content {
