upate the backgroun image

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://media.licdn.com/dms/image/v2/D4E16AQGdcUzadjxUUA/profile-displaybackgroundimage-shrink_350_1400/profile-displaybackgroundimage-shrink_350_1400/0/1726912937867?e=1732147200&v=beta&t=3sGpfrLwCQSDsAys1V2jNHyNm78X4xQb4r1ID8DJZEw");
+    background-image: url("assets/img14.png");
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
