--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url("assets/img14.png");
+    /* background-image: url("assets/img14.png"); */
+    background-color: gray;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
