no_need_to_set_a_commit

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    /* background-image: url("assets/img14.png"); */
+    background-image: url("./cat.jpeg");
     background-color: gray;
     background-size: cover;
     background-repeat: no-repeat;
