--- a/bash/css/style.css
+++ b/bash/css/style.css
@@ -1,11 +1,12 @@
 body {
-  background-color: #131516;
+  background-color: #1d1f21;
   color: #c5c8c6;
   font-family: 'Roboto Mono', monospace;
   font-size: 16px;
   margin: 0;
   padding: 5px;
   overflow: hidden;
+  /* scrollbar-width: 0; */
 }
 
 .wrapper {
@@ -62,7 +63,7 @@ body {
 }
 
 .output-wrapper {
-  background-color: #131516;
+  background-color:  #050505;
   color: #c5c8c6;
   font-size: 16px;
   overflow-y: auto;
