--- a/home/assets/css/styles.css
+++ b/home/assets/css/styles.css
@@ -58,6 +58,9 @@ body{
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
     color: var(--text-color);
+	/* font-family: 'Space Grotesk', sans-serif; */
+
+
     line-height: 1.6;
 }
 h1,h2,p{
