no_need_to_set_a_commit

--- a/news/style.css
+++ b/news/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .circle {
-    background-color: #ff7979;
+    background-color: #697477;
     height: 200px;
     width: 200px;
     border-radius: 50%;
