--- a/home/assets/css/styles.css
+++ b/home/assets/css/styles.css
@@ -5,6 +5,7 @@
 :root{
     --header-height: 3rem;
     --font-medium: 500;
+	background-color: #000000;
 }
 
 /*===== Colores =====*/
@@ -282,9 +283,12 @@ img{
 .about__social-icon{
     font-size: 1.4rem;
     margin: 0 var(--mb-1);
+	color: #000000;
 }
 .about__social-icon:hover{
-    color: var(--first-color);
+    /* color: var(--first-color);
+	 */
+	 color: black;
 }
 
 /* ===== SKILLS =====*/
@@ -292,21 +296,24 @@ img{
     row-gap: 2rem;
 }
 .skills__subtitle{
-    color: var(--first-color);
+    color: white;
+	/* color: #000000; */
     margin-bottom: var(--mb-3);
 }
 .skills__name{
     display: inline-block;
-    font-size: var(--small-font-size);
+	color: #000000;
+    font-size: var(1.25rem);
     margin-right: var(--mb-2);
     margin-bottom: var(--mb-3);
     padding: .25rem .5rem;
-    background-color: var(--white-color);
-    border-radius: .25rem;
+    background-color:  rgb(133, 220, 255);
+    border-radius: .4rem;
 }
 .skills__name:hover{
-    background-color: var(--first-color);
+    background-color: rgb(0, 0, 0);
     color: var(--white-color);
+	cursor: pointer;
 }
 .skills__img img{
     border-radius: .5rem;
@@ -335,7 +342,7 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255,255,255,.3);
+    background-color: rgba(0, 153, 255, 0.681);
     border-radius: .5rem;
     cursor: pointer;
     backdrop-filter: blur(10px);
@@ -404,7 +411,7 @@ img{
     padding: .25rem 0;
 }
 .footer__link:hover{
-    color: var(--first-color);
+    color: white;
 }
 .footer__social{
     font-size: 1.4rem;
@@ -525,4 +532,71 @@ img{
         width: 500px;
         right: 24%;
     }
+}
+
+
+.flexicalc-container{
+    position: relative;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 6px;
+    overflow: hidden;
+    z-index: 10;
+    backdrop-filter: blur(15px);
+    border-top:1px solid rgba(255, 255, 255, 0.02);
+    border-left:1px solid rgba(255, 255, 255, 0.02);
+    box-shadow: 5px 5px 30px rgba(0,0,0,0.2);
+}
+.flexicalc-container .flexicalc-calculator{
+    position: relative;
+    display: grid;
+}
+.flexicalc-container .flexicalc-calculator .value{
+    grid-column: span 4;
+    height: 140px;
+    width: 300px;
+    text-align: righ;
+    border: none;
+    outline: none;
+    padding: 10px;
+    font-size: 30px;
+    background: transparent;
+    color: white;
+    border-bottom: 1px rgba(255, 255, 255, 0.2);
+    border-right: 1px rgba(255, 255, 255, 0.1);
+    transition: 1.5s;
+}
+.flexicalc-container .flexicalc-calculator span{
+    display: grid;
+    place-items: center;
+    width: 75px;
+    height: 75px;
+    color: #fff;
+    font-weight: 400;
+    cursor: pointer;
+    font-size: 20px;
+    user-select: none;
+    border-bottom: 1px rgba(255, 255, 255, 0.05);
+    border-right: 1px rgba(255, 255, 255, 0.05);
+}
+.flexicalc-container .flexicalc-calculator span:hover{
+    transition: 0.2s;
+    background: rgba(255, 255, 255, 0.05);
+}
+.flexicalc-container .flexicalc-calculator span:active{
+    background: #14ff47;
+    color: #192f00;
+    font-size: 24px;
+    font-weight: 500;
+}
+.flexicalc-container .flexicalc-calculator .clear{
+    grid-column: span 2;
+    width: 150px; 
+    background: rgba(255, 255, 255, 0.05);
+}
+.flexicalc-container .flexicalc-calculator .plus{
+    grid-row: span 2;
+    height: 150px;
+}
+.flexicalc-container .flexicalc-calculator .equal{
+    background: rgba(255, 255, 255, 0.05);
 }
