update respondivity problems

--- a/home/assets/css/styles.css
+++ b/home/assets/css/styles.css
@@ -1,3 +1,6 @@
+
+/* rgb(133, 220, 255); */
+
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap");
 
