--- a/home/assets/css/styles.css
+++ b/home/assets/css/styles.css
@@ -9,6 +9,7 @@
     --header-height: 3rem;
     --font-medium: 500;
 	background-color: #000000;
+	/* background: linear-gradient(0deg, ); */
 }
 
 /*===== Colores =====*/
